--- a/public/map.html
+++ b/public/map.html
@@ -46,7 +46,7 @@
     map.addControl(new mapboxgl.NavigationControl(), 'top-right');
 
     // LIVE PROXY — WORKING NOW
-    const PROXY_URL = "https:/bankmaps-proxy.broken-hall-674a.workers.dev";
+    const PROXY_URL = "https://bankmaps-proxy.broken-hall-674a.workers.dev";
     const lenderSelect = document.getElementById("lenderSelect");
     const yearSelect = document.getElementById("yearSelect");
     const statusDiv = document.getElementById("status");
