--- a/public/live.html
+++ b/public/live.html
@@ -63,7 +63,7 @@
     map.addControl(new mapboxgl.NavigationControl(), 'top-right');
 
     // Replace with your actual Vercel project URL
-    const PROXY_URL = "https://bankmaps-dashboard.vercel.app/api/bankmaps";
+    const PROXY_URL = "https://bankmaps-dashboard.vercel.app/api/neon";
     const lenderSelect = document.getElementById("lenderSelect");
     const yearSelect = document.getElementById("yearSelect");
     const statusDiv = document.getElementById("status");
