--- a/public/signup.html
+++ b/public/signup.html
@@ -55,8 +55,8 @@
 
   <script>
   (async function(){
-    const lenderUrl = '/include/cache/loan_volume_cache.json';
-    const tiersUrl  = '/include/tiers.config.json';
+    const lenderUrl = '/public/loan_volume_cache.json';
+    const tiersUrl  = '/public/tiers.config.json';
 
     const lenderSelect = document.getElementById('lenderSelect');
     const lenderMeta   = document.getElementById('lenderMeta');
@@ -147,3 +147,4 @@
   </script>
 </body>
 </html>
+
