--- a/public/createaccount.html
+++ b/public/createaccount.html
@@ -5,21 +5,65 @@
   <title>BankMaps – Activate AIServices</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { font-family: system-ui, sans-serif; background: #f6f8fb; margin: 0; padding: 24px; }
-    .wrap { max-width: 720px; margin: auto; background: white; padding: 24px; border-radius: 12px; box-shadow: 0 6px 18px rgba(0,0,0,0.08); }
-    h1 { color: #0b3366; margin: 0 0 16px; }
-    label { display: block; font-weight: 600; margin: 16px 0 6px; }
-    select, button { width: 100%; padding: 10px; border: 1px solid #ccd5e0; border-radius: 8px; }
-    button { background: #0b5fff; color: white; border: none; cursor: pointer; margin-top: 16px; }
-    button:disabled { opacity: 0.6; cursor: not-allowed; }
-    #output { margin-top: 32px; padding: 16px; background: #f0f4f8; border-radius: 8px; white-space: pre; font-family: monospace; }
-    .note { color: #555; font-size: 0.9rem; margin-bottom: 16px; }
+    body {
+      font-family: system-ui, sans-serif;
+      background: #f6f8fb;
+      margin: 0;
+      padding: 24px;
+    }
+    .wrap {
+      max-width: 720px;
+      margin: auto;
+      background: white;
+      padding: 24px;
+      border-radius: 12px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+    }
+    h1 {
+      color: #0b3366;
+      margin: 0 0 16px;
+    }
+    label {
+      display: block;
+      font-weight: 600;
+      margin: 16px 0 6px;
+    }
+    select, button {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ccd5e0;
+      border-radius: 8px;
+    }
+    button {
+      background: #0b5fff;
+      color: white;
+      border: none;
+      cursor: pointer;
+      margin-top: 16px;
+    }
+    button:disabled {
+      opacity: 0.6;
+      cursor: not-allowed;
+    }
+    #output {
+      margin-top: 32px;
+      padding: 16px;
+      background: #f0f4f8;
+      border-radius: 8px;
+      white-space: pre;
+      font-family: monospace;
+    }
+    .note {
+      color: #555;
+      font-size: 0.9rem;
+      margin-bottom: 16px;
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
     <h1>Activate AIServices</h1>
-    <p class="note">Select your lender and geographies to build User_JSON. Data from live Neon query.</p>
+    <p class="note">Select your lender and geographies to build User_JSON. Data from live Neon query via API.</p>
 
     <label>Lender</label>
     <select id="lender">
@@ -27,13 +71,19 @@
     </select>
 
     <label>State</label>
-    <select id="state" disabled><option value="">— Select state —</option></select>
+    <select id="state" disabled>
+      <option value="">— Select state —</option>
+    </select>
 
     <label>County</label>
-    <select id="county" disabled><option value="">— Select county —</option></select>
+    <select id="county" disabled>
+      <option value="">— Select county —</option>
+    </select>
 
     <label>Town (optional)</label>
-    <select id="town" disabled><option value="">— Select town —</option></select>
+    <select id="town" disabled>
+      <option value="">— Select town —</option>
+    </select>
 
     <button id="add" disabled>Add to User_JSON</button>
 
@@ -41,34 +91,33 @@
   </div>
 
   <script>
-    // Load lenders (your existing file)
+    // Load lenders from your existing cache file
     fetch('/public/loan_volume_cache.json')
       .then(r => r.json())
       .then(lenders => {
         const sel = document.getElementById('lender');
         lenders.forEach(l => {
           const opt = document.createElement('option');
-          opt.value = l.lenderid || l.lender_id || l.lei;
-          opt.textContent = l.lendername || l.lender_name || opt.value;
+          opt.value = l.lenderid || l.lender_id || l.lei || l.id || Object.keys(l)[0];
+          opt.textContent = l.lendername || l.lender_name || l.name || opt.value;
           sel.appendChild(opt);
         });
+        // Enable state dropdown once lender selected
+        sel.onchange = () => {
+          document.getElementById('state').disabled = false;
+          document.getElementById('add').disabled = false;
+        };
       })
-      .catch(e => console.error('Lenders load error', e));
+      .catch(e => console.error('Lenders load error:', e));
 
-    // Enable lender selection
-    document.getElementById('lender').onchange = e => {
-      document.getElementById('state').disabled = false;
-      document.getElementById('add').disabled = false;
-    };
-
-    // Load states
+    // Load states from API
     fetch('/api/geographies?level=state')
       .then(r => r.json())
       .then(states => {
         const sel = document.getElementById('state');
         states.forEach(s => sel.innerHTML += `<option>${s}</option>`);
       })
-      .catch(e => console.error('States error', e));
+      .catch(e => console.error('States load error:', e));
 
     // County on state change
     document.getElementById('state').onchange = e => {
@@ -83,7 +132,8 @@
         .then(r => r.json())
         .then(counties => {
           counties.forEach(c => countySel.innerHTML += `<option>${c}</option>`);
-        });
+        })
+        .catch(e => console.error('Counties load error:', e));
     };
 
     // Town on county change
@@ -100,10 +150,11 @@
         .then(r => r.json())
         .then(towns => {
           towns.forEach(t => townSel.innerHTML += `<option>${t}</option>`);
-        });
+        })
+        .catch(e => console.error('Towns load error:', e));
     };
 
-    // Add selected geography
+    // Add selected geography to User_JSON preview
     document.getElementById('add').onclick = () => {
       const s = document.getElementById('state').value;
       const c = document.getElementById('county').value;
